examples/test_package/Double_dc_full/steps/benchzebra_precise_run5/#test_analysis_2_result.txt
### Evaluation Report: Zebra Puzzle in ProbLog

---

#### **1. Document Title**  
**Analysis of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**  
The Zebra Puzzle is a classic logic puzzle where the goal is to determine the correct arrangement of houses and their attributes based on given constraints. This report evaluates the implementation of the puzzle in ProbLog, focusing on logical correctness, test results, and adherence to requirements.

---

#### **3. Test Results Summary**  
The provided code fails during execution with the following error:  
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.
```  
**Key Observations:**  
- The error indicates that the predicate `member/2` is undefined in the ProbLog context.  
- No other test results are available due to this failure.  

---

#### **4. Failure Localization**  
- **Failed Query:** The entire `zebra/1` predicate fails due to the undefined `member/2` predicate.  
- **Code Location:** The error occurs at line 4, where `member/2` is first used.  
- **Expected vs. Actual:**  
  - **Expected:** The `member/2` predicate should be defined to check if an element exists in a list.  
  - **Actual:** The predicate is missing, causing the program to fail.  

---

#### **5. Root Cause Analysis**  
- **Logical Correctness:**  
  - The logic of the Zebra Puzzle is correctly encoded in the constraints (e.g., `right_of/3`, `next_to/3`).  
  - However, the absence of the `member/2` predicate disrupts the entire program.  
- **Recursive Termination:**  
  - The recursive predicates (`right_of/3`, `next_to/3`) are correctly defined and should terminate.  
- **Probabilistic Context:**  
  - No probabilistic facts or rules are used in this implementation.  
  - The error is purely syntactic (missing predicate).  

---

#### **6. Overall Analysis**  
- **Functional Requirements:**  
  - **Classical Reasoning:** Partially met (logic is correct, but missing predicate).  
  - **Probabilistic Reasoning:** Not applicable (no probabilistic facts).  
  - **Neural Network Integration:** Not used (DeepProbLog feature not used).  
- **Edge Cases:**  
  - The undefined `member/2` predicate is a critical oversight.  
  - Input validation (e.g., non-list input) is not addressed.  

---

#### **7. Error Summary**  

| Number | Problem                     | Impact                          | Suggestion                          |
|--------|-----------------------------|---------------------------------|-------------------------------------|
| 1      | Undefined `member/2` predicate | Program fails to execute        | Define `member/2` or use built-in.  |
| 2      | No probabilistic reasoning   | Limited to classical logic      | Add probabilistic facts if needed.  |

---

#### **8. Suggested Fix**  
To resolve the issue, define the `member/2` predicate or replace it with a built-in equivalent (if available in ProbLog). For example:  
```prolog
member(X, [X|_]).
member(X, [_|T]) :- member(X, T).
```  
After this fix, the program should execute correctly, and further testing can be performed to verify the logic.

---

**Word Count:** ~400 words.  
**Tone:** Formal and analytical.  
**Format:** Markdown with tables and code blocks.  